cmake_minimum_required(VERSION 3.9)
project(cpp_eth_lux_develop)

set(CMAKE_CXX_STANDARD 11)

add_executable(cpp_eth_lux_develop
        bench/CMakeLists.txt
        bench/main.cpp
        cmake/scripts/buildinfo.cmake
        cmake/scripts/configure.cmake
        cmake/scripts/copydlls.cmake
        cmake/scripts/helpers.cmake
        cmake/scripts/install_deps.cmake
        cmake/scripts/jsonrpcstub.cmake
        cmake/scripts/resource.hpp.in
        cmake/scripts/resources.cmake
        cmake/scripts/runtest.cmake
        cmake/secp256k1/CMakeLists.txt
        cmake/templates/BuildInfo.h.in
        cmake/CMakeParseArguments.cmake
        cmake/EthBuildInfo.cmake
        cmake/EthCompilerSettings.cmake
        cmake/EthDependencies.cmake
        cmake/EthExecutableHelper.cmake
        cmake/EthOptions.cmake
        cmake/EthPolicy.cmake
        cmake/EthUtils.cmake
        cmake/FindCpuid.cmake
        cmake/FindCURL.cmake
        cmake/FindDev.cmake
        cmake/FindEth.cmake
        cmake/FindGmp.cmake
        cmake/Findjson_rpc_cpp.cmake
        cmake/FindLevelDB.cmake
        cmake/FindMHD.cmake
        cmake/FindMiniupnpc.cmake
        cmake/FindPackageHandleStandardArgs.cmake
        cmake/FindPackageMessage.cmake
        cmake/FindRocksDB.cmake
        cmake/FindSSH2.cmake
        cmake/FindUtils.cmake
        cmake/FindWeb3.cmake
        cmake/FindWindowsSDK.cmake
        cmake/ProjectBoost.cmake
        cmake/ProjectCryptopp.cmake
        cmake/ProjectJsonCpp.cmake
        cmake/ProjectJsonRpcCpp.cmake
        cmake/ProjectSecp256k1.cmake
        cmake/UseCpuid.cmake
        cmake/UseDev.cmake
        cmake/UseEth.cmake
        cmake/UseGmp.cmake
        cmake/UseMhd.cmake
        cmake/UseMiniupnpc.cmake
        cmake/UseOpenSSL.cmake
        cmake/UseSSH2.cmake
        cmake/UseUtils.cmake
        cmake/UseWeb3.cmake
        cmake/UseZLIB.cmake
        dist/snap/snapcraft.yaml
        doc/dependency_graph/generate.py
        doc/dependency_graph/generate.sh
        doc/dependency_graph/README.md
        doc/gitbook/styles/website.css
        doc/gitbook/book.json
        doc/gitbook/chapter1.md
        doc/gitbook/cli_tools.md
        doc/gitbook/code_editor.md
        doc/gitbook/cold_wallet_storage_device.md
        doc/gitbook/dapps_deployment.md
        doc/gitbook/ethkey.md
        doc/gitbook/getting_started.md
        doc/gitbook/interactive_console.md
        doc/gitbook/javascript_console.md
        doc/gitbook/mining.md
        doc/gitbook/mix.md
        doc/gitbook/mix_bc.png
        doc/gitbook/poa.md
        doc/gitbook/project_editor.md
        doc/gitbook/README.md
        doc/gitbook/scenarios_editor.md
        doc/gitbook/state_mix.png
        doc/gitbook/state_viewer.md
        doc/gitbook/SUMMARY.md
        doc/gitbook/transaction_debugger.md
        doc/gitbook/transaction_explorer.md
        doc/gitbook/whisper.md
        doc/Doxyfile
        eth/AccountManager.cpp
        eth/AccountManager.h
        eth/CMakeLists.txt
        eth/Farm.h
        eth/farm.json
        eth/main.cpp
        ethkey/CMakeLists.txt
        ethkey/KeyAux.h
        ethkey/main.cpp
        ethminer/CMakeLists.txt
        ethminer/FarmClient.h
        ethminer/main.cpp
        ethminer/MinerAux.h
        ethminer/minerfarm.json
        ethvm/CMakeLists.txt
        ethvm/main.cpp
        homebrew/fix_homebrew_paths_in_standalone_zip.py
        homebrew/homebrew.mxcl.cpp-ethereum.plist
        homebrew/INSTALL_RECEIPT.json
        homebrew/prepare_receipt.sh
        libdevcore/Assertions.h
        libdevcore/Base64.cpp
        libdevcore/Base64.h
        libdevcore/CMakeLists.txt
        libdevcore/Common.cpp
        libdevcore/Common.h
        libdevcore/CommonData.cpp
        libdevcore/CommonData.h
        libdevcore/CommonIO.cpp
        libdevcore/CommonIO.h
        libdevcore/CommonJS.cpp
        libdevcore/CommonJS.h
        libdevcore/concurrent_queue.h
        libdevcore/db.h
        libdevcore/debugbreak.h
        libdevcore/Exceptions.h
        libdevcore/FileSystem.cpp
        libdevcore/FileSystem.h
        libdevcore/FixedHash.cpp
        libdevcore/FixedHash.h
        libdevcore/Guards.cpp
        libdevcore/Guards.h
        libdevcore/Hash.cpp
        libdevcore/Hash.h
        libdevcore/Log.cpp
        libdevcore/Log.h
        libdevcore/MemoryDB.cpp
        libdevcore/MemoryDB.h
        libdevcore/OverlayDB.cpp
        libdevcore/OverlayDB.h
        libdevcore/picosha2.h
        libdevcore/RangeMask.h
        libdevcore/RLP.cpp
        libdevcore/RLP.h
        libdevcore/SHA3.cpp
        libdevcore/SHA3.h
        libdevcore/Terminal.h
        libdevcore/TransientDirectory.cpp
        libdevcore/TransientDirectory.h
        libdevcore/TrieCommon.cpp
        libdevcore/TrieCommon.h
        libdevcore/TrieDB.cpp
        libdevcore/TrieDB.h
        libdevcore/TrieHash.cpp
        libdevcore/TrieHash.h
        libdevcore/UndefMacros.h
        libdevcore/vector_ref.h
        libdevcore/Worker.cpp
        libdevcore/Worker.h
        libdevcrypto/AES.cpp
        libdevcrypto/AES.h
        libdevcrypto/CMakeLists.txt
        libdevcrypto/Common.cpp
        libdevcrypto/Common.h
        libdevcrypto/CryptoPP.cpp
        libdevcrypto/CryptoPP.h
        libdevcrypto/ECDHE.cpp
        libdevcrypto/ECDHE.h
        libdevcrypto/Exceptions.h
        libdevcrypto/SecretStore.cpp
        libdevcrypto/SecretStore.h
        libethash/CMakeLists.txt
        libethash/compiler.h
        libethash/data_sizes.h
        libethash/endian.h
        libethash/ethash.h
        libethash/fnv.h
        libethash/internal.c
        libethash/internal.h
        libethash/io.c
        libethash/io.h
        libethash/io_posix.c
        libethash/io_win32.c
        libethash/mmap.h
        libethash/mmap_win32.c
        libethash/sha3.c
        libethash/sha3.h
        libethash/util.c
        libethash/util.h
        libethash/util_win32.c
        libethashseal/genesis/CMakeLists.txt
        libethashseal/genesis/eip150Test.cpp
        libethashseal/genesis/eip158Test.cpp
        libethashseal/genesis/frontierTest.cpp
        libethashseal/genesis/homesteadTest.cpp
        libethashseal/genesis/luxMainNetwork.cpp
        libethashseal/genesis/luxTestNetwork.cpp
        libethashseal/genesis/mainNetwork.cpp
        libethashseal/genesis/mainNetworkTest.cpp
        libethashseal/genesis/metropolisTest.cpp
        libethashseal/genesis/ropsten.cpp
        libethashseal/genesis/transitionnetTest.cpp
        libethashseal/CMakeLists.txt
        libethashseal/Ethash.cpp
        libethashseal/Ethash.h
        libethashseal/EthashAux.cpp
        libethashseal/EthashAux.h
        libethashseal/EthashClient.cpp
        libethashseal/EthashClient.h
        libethashseal/EthashCPUMiner.cpp
        libethashseal/EthashCPUMiner.h
        libethashseal/EthashProofOfWork.cpp
        libethashseal/EthashProofOfWork.h
        libethashseal/GenesisInfo.cpp
        libethashseal/GenesisInfo.h
        libethcore/ABI.cpp
        libethcore/ABI.h
        libethcore/BasicAuthority.cpp
        libethcore/BasicAuthority.h
        libethcore/BlockHeader.cpp
        libethcore/BlockHeader.h
        libethcore/ChainOperationParams.cpp
        libethcore/ChainOperationParams.h
        libethcore/CMakeLists.txt
        libethcore/Common.cpp
        libethcore/Common.h
        libethcore/CommonJS.cpp
        libethcore/CommonJS.h
        libethcore/Exceptions.h
        libethcore/ICAP.cpp
        libethcore/ICAP.h
        libethcore/KeyManager.cpp
        libethcore/KeyManager.h
        libethcore/Precompiled.cpp
        libethcore/Precompiled.h
        libethcore/SealEngine.cpp
        libethcore/SealEngine.h
        libethcore/Transaction.cpp
        libethcore/Transaction.h
        libethereum/Account.cpp
        libethereum/Account.h
        libethereum/BasicGasPricer.cpp
        libethereum/BasicGasPricer.h
        libethereum/Block.cpp
        libethereum/Block.h
        libethereum/BlockChain.cpp
        libethereum/BlockChain.h
        libethereum/BlockChainSync.cpp
        libethereum/BlockChainSync.h
        libethereum/BlockDetails.cpp
        libethereum/BlockDetails.h
        libethereum/BlockQueue.cpp
        libethereum/BlockQueue.h
        libethereum/ChainParams.cpp
        libethereum/ChainParams.h
        libethereum/Client.cpp
        libethereum/Client.h
        libethereum/ClientBase.cpp
        libethereum/ClientBase.h
        libethereum/ClientTest.cpp
        libethereum/ClientTest.h
        libethereum/CMakeLists.txt
        libethereum/CodeSizeCache.h
        libethereum/CommonNet.cpp
        libethereum/CommonNet.h
        libethereum/Defaults.cpp
        libethereum/Defaults.h
        libethereum/EthereumHost.cpp
        libethereum/EthereumHost.h
        libethereum/EthereumPeer.cpp
        libethereum/EthereumPeer.h
        libethereum/Executive.cpp
        libethereum/Executive.h
        libethereum/ExtVM.cpp
        libethereum/ExtVM.h
        libethereum/GasPricer.cpp
        libethereum/GasPricer.h
        libethereum/GenericFarm.h
        libethereum/GenericMiner.cpp
        libethereum/GenericMiner.h
        libethereum/GenesisInfo.cpp
        libethereum/GenesisInfo.h
        libethereum/Interface.cpp
        libethereum/Interface.h
        libethereum/LogFilter.cpp
        libethereum/LogFilter.h
        libethereum/MiningClient.cpp
        libethereum/MiningClient.h
        libethereum/State.cpp
        libethereum/State.h
        libethereum/Transaction.cpp
        libethereum/Transaction.h
        libethereum/TransactionQueue.cpp
        libethereum/TransactionQueue.h
        libethereum/TransactionReceipt.cpp
        libethereum/TransactionReceipt.h
        libethereum/VerifiedBlock.h
        libevm/All.h
        libevm/CMakeLists.txt
        libevm/ExtVMFace.cpp
        libevm/ExtVMFace.h
        libevm/JitVM.cpp
        libevm/JitVM.h
        libevm/SmartVM.cpp
        libevm/SmartVM.h
        libevm/VM.cpp
        libevm/VM.h
        libevm/VMCalls.cpp
        libevm/VMConfig.h
        libevm/VMFace.h
        libevm/VMFactory.cpp
        libevm/VMFactory.h
        libevm/VMOpt.cpp
        libevm/VMValidate.cpp
        libevmcore/CMakeLists.txt
        libevmcore/EVMSchedule.h
        libevmcore/Exceptions.h
        libevmcore/Instruction.cpp
        libevmcore/Instruction.h
        libp2p/All.h
        libp2p/Capability.cpp
        libp2p/Capability.h
        libp2p/CMakeLists.txt
        libp2p/Common.cpp
        libp2p/Common.h
        libp2p/Host.cpp
        libp2p/Host.h
        libp2p/HostCapability.cpp
        libp2p/HostCapability.h
        libp2p/Network.cpp
        libp2p/Network.h
        libp2p/NodeTable.cpp
        libp2p/NodeTable.h
        libp2p/Peer.cpp
        libp2p/Peer.h
        libp2p/RLPXFrameCoder.cpp
        libp2p/RLPXFrameCoder.h
        libp2p/RLPXFrameReader.cpp
        libp2p/RLPXFrameReader.h
        libp2p/RLPXFrameWriter.cpp
        libp2p/RLPXFrameWriter.h
        libp2p/RLPxHandshake.cpp
        libp2p/RLPxHandshake.h
        libp2p/RLPXPacket.h
        libp2p/RLPXSocket.h
        libp2p/RLPXSocketIO.cpp
        libp2p/RLPXSocketIO.h
        libp2p/Session.cpp
        libp2p/Session.h
        libp2p/UDP.cpp
        libp2p/UDP.h
        libp2p/UPnP.cpp
        libp2p/UPnP.h
        libweb3jsonrpc/AccountHolder.cpp
        libweb3jsonrpc/AccountHolder.h
        libweb3jsonrpc/admin_eth.json
        libweb3jsonrpc/admin_net.json
        libweb3jsonrpc/admin_utils.json
        libweb3jsonrpc/AdminEth.cpp
        libweb3jsonrpc/AdminEth.h
        libweb3jsonrpc/AdminEthFace.h
        libweb3jsonrpc/AdminNet.cpp
        libweb3jsonrpc/AdminNet.h
        libweb3jsonrpc/AdminNetFace.h
        libweb3jsonrpc/AdminUtils.cpp
        libweb3jsonrpc/AdminUtils.h
        libweb3jsonrpc/AdminUtilsFace.h
        libweb3jsonrpc/CMakeLists.txt
        libweb3jsonrpc/db.json
        libweb3jsonrpc/DBFace.h
        libweb3jsonrpc/Debug.cpp
        libweb3jsonrpc/Debug.h
        libweb3jsonrpc/debug.json
        libweb3jsonrpc/DebugFace.h
        libweb3jsonrpc/Eth.cpp
        libweb3jsonrpc/Eth.h
        libweb3jsonrpc/eth.json
        libweb3jsonrpc/EthFace.h
        libweb3jsonrpc/IpcServer.h
        libweb3jsonrpc/IpcServerBase.cpp
        libweb3jsonrpc/IpcServerBase.h
        libweb3jsonrpc/JsonHelper.cpp
        libweb3jsonrpc/JsonHelper.h
        libweb3jsonrpc/LevelDB.cpp
        libweb3jsonrpc/LevelDB.h
        libweb3jsonrpc/MemoryDB.cpp
        libweb3jsonrpc/MemoryDB.h
        libweb3jsonrpc/ModularServer.h
        libweb3jsonrpc/Net.cpp
        libweb3jsonrpc/Net.h
        libweb3jsonrpc/net.json
        libweb3jsonrpc/NetFace.h
        libweb3jsonrpc/Personal.cpp
        libweb3jsonrpc/Personal.h
        libweb3jsonrpc/personal.json
        libweb3jsonrpc/PersonalFace.h
        libweb3jsonrpc/SafeHttpServer.cpp
        libweb3jsonrpc/SafeHttpServer.h
        libweb3jsonrpc/SessionManager.cpp
        libweb3jsonrpc/SessionManager.h
        libweb3jsonrpc/Test.cpp
        libweb3jsonrpc/Test.h
        libweb3jsonrpc/test.json
        libweb3jsonrpc/TestFace.h
        libweb3jsonrpc/UnixSocketServer.cpp
        libweb3jsonrpc/UnixSocketServer.h
        libweb3jsonrpc/Web3.cpp
        libweb3jsonrpc/Web3.h
        libweb3jsonrpc/web3.json
        libweb3jsonrpc/Web3Face.h
        libweb3jsonrpc/Whisper.cpp
        libweb3jsonrpc/Whisper.h
        libweb3jsonrpc/whisper.json
        libweb3jsonrpc/WhisperFace.h
        libweb3jsonrpc/WinPipeServer.cpp
        libweb3jsonrpc/WinPipeServer.h
        libwebthree/CMakeLists.txt
        libwebthree/WebThree.cpp
        libwebthree/WebThree.h
        libwhisper/BloomFilter.h
        libwhisper/CMakeLists.txt
        libwhisper/Common.cpp
        libwhisper/Common.h
        libwhisper/Interface.cpp
        libwhisper/Interface.h
        libwhisper/Message.cpp
        libwhisper/Message.h
        libwhisper/WhisperDB.cpp
        libwhisper/WhisperDB.h
        libwhisper/WhisperHost.cpp
        libwhisper/WhisperHost.h
        libwhisper/WhisperPeer.cpp
        libwhisper/WhisperPeer.h
        rlp/CMakeLists.txt
        rlp/main.cpp
        scripts/docker/eth-alpine/Dockerfile
        scripts/docker/eth-centos/Dockerfile
        scripts/docker/eth-debian/Dockerfile
        scripts/docker/eth-fedora/Dockerfile
        scripts/build.sh
        scripts/docker-eth
        scripts/Dockerfile
        scripts/duplicates.sh
        scripts/install_cmake.sh
        scripts/install_deps.bat
        scripts/install_deps.sh
        scripts/ppabuild.sh
        scripts/release.bat
        scripts/release.sh
        scripts/runalltests.sh
        scripts/tests.bat
        scripts/tests.sh
        scripts/upload-homebrew-formula.sh
        test/deprecated/fork.cpp
        test/deprecated/kademlia.cpp
        test/deprecated/main.cpp
        test/deprecated/txTest.cpp
        test/external-dependencies/boost.cpp
        test/external-dependencies/CMakeLists.txt
        test/fuzzTesting/CMakeLists.txt
        test/fuzzTesting/createRandomTest.cpp
        test/fuzzTesting/fuzzHelper.cpp
        test/fuzzTesting/fuzzHelper.h
        test/libdevcore/Base36.cpp
        test/libdevcore/CMakeLists.txt
        test/libdevcore/CommonJS.cpp
        test/libdevcore/core.cpp
        test/libdevcore/FixedHash.cpp
        test/libdevcore/RangeMask.cpp
        test/libdevcore/rlp.cpp
        test/libdevcrypto/AES.cpp
        test/libdevcrypto/CMakeLists.txt
        test/libdevcrypto/crypto.cpp
        test/libdevcrypto/hexPrefix.cpp
        test/libdevcrypto/MemTrie.cpp
        test/libdevcrypto/MemTrie.h
        test/libdevcrypto/SecretStore.cpp
        test/libdevcrypto/trie.cpp
        test/libethcore/CMakeLists.txt
        test/libethcore/commonjs.cpp
        test/libethcore/dagger.cpp
        test/libethcore/difficulty.cpp
        test/libethcore/icap.cpp
        test/libethcore/keymanager.cpp
        test/libethereum/Block.cpp
        test/libethereum/BlockChain.cpp
        test/libethereum/BlockChainInsert.cpp
        test/libethereum/BlockChainTests.cpp
        test/libethereum/BlockChainTestsBoost.cpp
        test/libethereum/BlockQueue.cpp
        test/libethereum/ClientBase.cpp
        test/libethereum/CMakeLists.txt
        test/libethereum/EthereumPeerTest.cpp
        test/libethereum/GasPricer.cpp
        test/libethereum/Genesis.cpp
        test/libethereum/StateTests.cpp
        test/libethereum/StateUnitTests.cpp
        test/libethereum/Transaction.cpp
        test/libethereum/TransactionQueue.cpp
        test/libethereum/TransactionTests.cpp
        test/libevm/CMakeLists.txt
        test/libevm/vm.cpp
        test/libevm/vm.h
        test/libp2p/capability.cpp
        test/libp2p/CMakeLists.txt
        test/libp2p/eip-8.cpp
        test/libp2p/net.cpp
        test/libp2p/peer.cpp
        test/libp2p/rlpx.cpp
        test/libtesteth/BlockChainHelper.cpp
        test/libtesteth/BlockChainHelper.h
        test/libtesteth/boostTest.cpp
        test/libtesteth/CMakeLists.txt
        test/libtesteth/ImportTest.cpp
        test/libtesteth/ImportTest.h
        test/libtesteth/JsonSpiritHeaders.h
        test/libtesteth/Options.cpp
        test/libtesteth/Options.h
        test/libtesteth/Stats.cpp
        test/libtesteth/Stats.h
        test/libtesteth/TestHelper.cpp
        test/libtesteth/TestHelper.h
        test/libtesteth/TestOutputHelper.cpp
        test/libtesteth/TestOutputHelper.h
        test/libtesteth/TestUtils.cpp
        test/libtesteth/TestUtils.h
        test/libtestutils/BlockChainLoader.cpp
        test/libtestutils/BlockChainLoader.h
        test/libtestutils/CMakeLists.txt
        test/libtestutils/Common.cpp
        test/libtestutils/Common.h
        test/libtestutils/FixedClient.cpp
        test/libtestutils/FixedClient.h
        test/libtestutils/StateLoader.cpp
        test/libtestutils/StateLoader.h
        test/libweb3core/CMakeLists.txt
        test/libweb3core/memorydb.cpp
        test/libweb3core/overlaydb.cpp
        test/libweb3jsonrpc/AccountHolder.cpp
        test/libweb3jsonrpc/Client.cpp
        test/libweb3jsonrpc/CMakeLists.txt
        test/libweb3jsonrpc/jsonrpc.cpp
        test/libweb3jsonrpc/WebThreeStubClient.h
        test/libwhisper/bloomFilter.cpp
        test/libwhisper/CMakeLists.txt
        test/libwhisper/shhrpc.cpp
        test/libwhisper/whisperDB.cpp
        test/libwhisper/whisperMessage.cpp
        test/libwhisper/whisperTopic.cpp
        test/performance/fun.sol
        test/performance/loop.sol
        test/performance/mix.sol
        test/performance/mul0.sol
        test/performance/mul256.sol
        test/performance/mul64.sol
        test/performance/mul64c.c
        test/performance/rc5.sol
        test/performance/rng.sol
        test/CMakeLists.txt
        test/JSON_test.sol
        utils/json_spirit/CMakeLists.txt
        utils/json_spirit/json_spirit.h
        utils/json_spirit/json_spirit.vcproj
        utils/json_spirit/json_spirit_error_position.h
        utils/json_spirit/json_spirit_reader.cpp
        utils/json_spirit/json_spirit_reader.h
        utils/json_spirit/json_spirit_reader_template.h
        utils/json_spirit/json_spirit_stream_reader.h
        utils/json_spirit/json_spirit_utils.h
        utils/json_spirit/json_spirit_value.cpp
        utils/json_spirit/json_spirit_value.h
        utils/json_spirit/json_spirit_writer.cpp
        utils/json_spirit/json_spirit_writer.h
        utils/json_spirit/json_spirit_writer_template.h
        utils/json_spirit/JsonSpiritHeaders.h
        utils/libscrypt/b64.c
        utils/libscrypt/b64.h
        utils/libscrypt/CMakeLists.txt
        utils/libscrypt/crypto-mcf.c
        utils/libscrypt/crypto-scrypt-saltgen.c
        utils/libscrypt/crypto_scrypt-check.c
        utils/libscrypt/crypto_scrypt-hash.c
        utils/libscrypt/crypto_scrypt-hexconvert.c
        utils/libscrypt/crypto_scrypt-hexconvert.h
        utils/libscrypt/crypto_scrypt-nosse.c
        utils/libscrypt/libscrypt.h
        utils/libscrypt/libscrypt.version
        utils/libscrypt/LICENSE
        utils/libscrypt/sha256.c
        utils/libscrypt/sha256.h
        utils/libscrypt/slowequals.c
        utils/libscrypt/slowequals.h
        utils/libscrypt/sysendian.h
        utils/CMakeLists.txt
        appveyor.yml
        CMakeLists.txt
        codecov.yml
        CodingStandards.txt
        LICENSE
        README.md
        refilltests
        sanitizer-blacklist.txt)
